@@ -49,6 +49,7 @@ set(libdmetadata_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_video.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_libheif.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_libraw.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_imagemagick.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_fileio.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_comments.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dmetadata/dmetadata_template.cpp
