@@ -4,14 +4,15 @@
  * https://www.digikam.org
  *
  * Date        : 2020-12-23
- * Description : identify properties from image with ImageMagick.
+ * Description : item metadata interface - ImageMagick helpers.
  *
  * Copyright (C) 2020-2021 by Gilles Caulier <caulier dot gilles at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
  * Public License as published by the Free Software Foundation;
- * either version 2, or (at your option) any later version.
+ * either version 2, or (at your option)
+ * any later version.
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -20,37 +21,36 @@
  *
  * ============================================================ */
 
+#include "dmetadata.h"
+
 // Qt includes
 
 #include <QString>
 #include <QStringList>
-#include <QDebug>
-#include <QCoreApplication>
 
 // Local includes
 
-#include "metaengine.h"
+#include "digikam_config.h"
+#include "digikam_debug.h"
 
 // ImageMagick includes
+
+#ifdef HAVE_IMAGE_MAGICK
 
 #include <Magick++.h>
 
 using namespace Magick;
 using namespace MagickCore;
-using namespace Digikam;
 
-int main(int argc, char** argv)
+#endif // HAVE_IMAGE_MAGICK
+
+namespace Digikam
 {
-    QCoreApplication app(argc, argv);
 
-    if (argc != 2)
-    {
-        qDebug() << "magickidentify - load image metadata with Image Magick";
-        qDebug() << "Usage: <image>";
-        return -1;
-    }
+bool DMetadata::loadUsingImageMagick(const QString& filePath)
+{
 
-    MagickCoreGenesis((char*)nullptr, MagickFalse);
+#ifdef HAVE_IMAGE_MAGICK
 
     const int msize                   = 20;
     MagickCore::ImageInfo* image_info = nullptr;
@@ -59,32 +59,32 @@ int main(int argc, char** argv)
     // Syntax description of IM percent escape formats: https://imagemagick.org/script/escape.php
 
     const QString filters             = QLatin1String(
-                                            "Exif.Image.ImageLength=%[height]\n"
-                                            "Exif.Image.ImageWidth=%[width]\n"
-                                            "Exif.Image.Compression=%[compression]\n"
-                                            "Exif.Image.BitsPerSample=%[bit-depth]\n"
-                                            "Exif.Image.ImageDescription=%[caption]\n"
-                                            "Exif.Photo.ColorSpace=%[colorspace]\n"
-                                            "Exif.Image.CameraLabel=%[label]\n"
-                                            "Exif.Image.Orientation=%[orientation]\n"
-                                            "Exif.Photo.UserComment=%[comment]\n"
-                                            "Exif.Image.DateTime=%[date:create]\n"
-                                            "Exif.Image.DateTimeOriginal=%[date:create]\n"
-                                            "Xmp.IMProperties.IMVersion=%[version]\n"
-                                            "Xmp.IMProperties.IMCopyright=%[copyright]\n"
-                                            "Xmp.IMProperties.IMBaseName=%[basename]\n"
-                                            "Xmp.IMProperties.IMExtension=%[extension]\n"
-                                            "Xmp.IMProperties.IMCodec=%[magick]\n"
-                                            "Xmp.IMProperties.IMChannels=%[channels]\n"
-                                            "Xmp.IMProperties.IMInterlace=%[interlace]\n"
-                                            "Xmp.IMProperties.IMProfiles=%[profiles]\n"
-                                            "Xmp.IMProperties.IMQuality=%[quality]\n"
-                                            "Xmp.IMProperties.IMRendering=%[rendering-intent]\n"
-                                            "Xmp.IMProperties.IMResolutionX=%[resolution.x]\n"
-                                            "Xmp.IMProperties.IMResolutionY=%[resolution.y]\n"
-                                            "Xmp.IMProperties.IMResolutionUnits=%[units]\n"
-                                            "Xmp.IMProperties.IMScene=%[scene]\n"
-                                            "%[*]\n"    // Extra properties from IM/
+                                            "Xmp.tiff.ImageLength=%[height]\n"                      // Text
+                                            "Xmp.tiff.ImageWidth=%[width]\n"                        // Text
+                                            "Xmp.tiff.Compression=%[compression]\n"                 // Text
+                                            "Xmp.tiff.BitsPerSample=%[bit-depth]\n"                 // Seq
+                                            "Xmp.tiff.ImageDescription=%[caption]\n"                // LangAlt
+                                            "Xmp.xmp.Label=%[label]\n"                              // Text
+                                            "Xmp.tiff.Orientation=%[orientation]\n"                 // Text
+                                            "Xmp.tiff.DateTime=%[date:create]\n"                    // Text
+                                            "Xmp.tiff.XResolution=%[resolution.x]\n"                // Text
+                                            "Xmp.tiff.YResolution=%[resolution.y]\n"                // Text
+                                            "Xmp.tiff.ResolutionUnit=%[units]\n"                    // Text
+                                            "Xmp.exif.UserComment=%[comment]\n"                     // LangAlt
+                                            "Xmp.exif.ColorSpace=%[colorspace]\n"                   // Text
+                                            "Xmp.exif.DateTimeOriginal=%[date:create]\n"            // Text
+                                            "Xmp.IMProperties.IMVersion=%[version]\n"               // Text
+                                            "Xmp.IMProperties.IMCopyright=%[copyright]\n"           // Text
+                                            "Xmp.IMProperties.IMBaseName=%[basename]\n"             // Text
+                                            "Xmp.IMProperties.IMExtension=%[extension]\n"           // Text
+                                            "Xmp.IMProperties.IMCodec=%[magick]\n"                  // Text
+                                            "Xmp.IMProperties.IMChannels=%[channels]\n"             // Text
+                                            "Xmp.IMProperties.IMInterlace=%[interlace]\n"           // Text
+                                            "Xmp.IMProperties.IMProfiles=%[profiles]\n"             // Text
+                                            "Xmp.IMProperties.IMQuality=%[quality]\n"               // Text
+                                            "Xmp.IMProperties.IMRendering=%[rendering-intent]\n"    // Text
+                                            "Xmp.IMProperties.IMScene=%[scene]\n"                   // Text
+                                            "%[*]\n"    // Extra properties from IM                 // Text
 
 // Values calculated (not specified in IM doc) and take a while
 //                                            "Xmp.IMProperties.IMColors=%[colors]\n"
@@ -109,25 +109,27 @@ int main(int argc, char** argv)
         // Prepare image info for IM isentification
 
         image_info          = CloneImageInfo((ImageInfo*)nullptr);
-        strcpy(image_info->filename, argv[1]);
+        strcpy(image_info->filename, filePath.toLatin1().constData());
         image_info->ping    = MagickTrue;
         image_info->verbose = MagickTrue;
         image_info->debug   = MagickTrue;
 
         // Insert percent escape format for IM identification
 
-        int identargc       = argc + 2;
+        int identargc       = 4;
         char** identargv    = new char*[identargc];
-        identargv[0]        = argv[0];
+        identargv[0]        = (char*)"dmetadata";
         identargv[1]        = (char*)"-format";
         identargv[2]        = filters.toLatin1().data();
-        identargv[3]        = argv[1];
+        identargv[3]        = filePath.toLatin1().data();
 
         // Call IM core identification
 
         IdentifyImageCommand(image_info, identargc, identargv, metadata, &ex);
 
         // Post process metadata
+
+        registerXmpNameSpace(QLatin1String("https://imagemagick.org/"), QLatin1String("IMProperties"));
 
         QString                 output;
         MetaEngine::MetaDataMap tagsMap;
@@ -175,8 +177,7 @@ int main(int argc, char** argv)
                 val = QLatin1String("None");        // Mimic IM "none" strings, not i18n
             }
 
-            if (!key.startsWith(QLatin1String("Exif")) &&
-                !key.startsWith(QLatin1String("Xmp")))
+            if (!key.startsWith(QLatin1String("Xmp")))
             {
                 // Create a dedicated XMP namespace to store extra IM properties.
 
@@ -187,7 +188,25 @@ int main(int argc, char** argv)
             key = key.remove(QLatin1Char('_'));
             val = val.simplified();
 
-            qDebug() << key << " :: " << val;
+            // Register XMP tags in container
+
+            if      (
+                     key == QLatin1String("Xmp.tiff.ImageDescription") ||
+                     key == QLatin1String("Xmp.exif.UserComment")
+                    )
+            {
+                setXmpTagStringLangAlt(key.toLatin1().constData(), val, QString());
+            }
+            else if (
+                     key == QLatin1String("Xmp.tiff.BitsPerSample")
+                    )
+            {
+                setXmpTagStringSeq(key.toLatin1().constData(), QStringList() << val);
+            }
+            else
+            {
+                setXmpTagString(key.toLatin1().constData(), val);
+            }
         }
 
         // Clear memory
@@ -207,12 +226,15 @@ int main(int argc, char** argv)
     catch (Exception& error_)
     {
         qWarning() << "Cannot read metadata from ["
-                   << argv[1]
+                   << filePath
                    << "] due to ImageMagick exception:"
                    << error_.what();
     }
 
-    MagickCoreTerminus();
 
-    return 0;
+#endif // HAVE_IMAGE_MAGICK
+
+    return false;
 }
+
+} // namespace Digikam
